// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component should render 1`] = `
<DocumentFragment>
  <div
    class="tile tile-gradient"
    style="--tile-background: #00639a;"
  >
    <div
      aria-hidden="true"
      class="tile__background-image"
    >
      test-file-stub
    </div>
    <a
      class="tile__main-content"
      href="/"
    >
      <span>
        <h2
          class="tile__header big"
        >
          Tile title
        </h2>
        <h3
          class="tile__subtitle small"
        >
          Subtitle
        </h3>
      </span>
    </a>
    <small
      class="tile__description"
    >
      My description
    </small>
  </div>
</DocumentFragment>
`;

exports[`Tile component should render with default specified width 1`] = `
<DocumentFragment>
  <div
    class="tile"
    style="width: 20rem;"
  >
    <div
      aria-hidden="true"
      class="tile__background-image"
    />
    <a
      class="tile__main-content"
      href="/"
    >
      <span>
        <h2
          class="tile__header big"
        >
          Tile title
        </h2>
      </span>
    </a>
  </div>
</DocumentFragment>
`;
